(lang dune 3.10)

(name capitalcommander)

(generate_opam_files true)

(source
 (github rockwolf/nintaitrading-eu))

(authors "Andy Nagels")

(maintainers "Andy Nagels")

(license MIT)

(documentation https://github.com/nintaitrading-eu/capitalcommander-ui-ml)

(package
 (name capitalcommander)
 (synopsis "A web application to log trades.")
 (description "A web application that acts as a front-end for capitalcommander-api-rs.")
 (depends ocaml dune lwt_ppx crunch)
 (tags
  (ocaml frontend capitalcommander trading)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
